[metadata]
name = cloudshell_sandboxapi_wrapper
version = file: version.txt
author = QualiLab
author_email = support@qualisystems.com
description = Python client for CloudShell Sandbox REST api - consume sandboxes via CI
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/QualiSystemsLab/Sandbox-API-Python
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_file = LICENSE


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2

[options.packages.find]
where = src